--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     </head>
     <body>
       <header>
-        <img src="https://via.placeholder.com/200x70">
+        <img src="https://via.placeholder.com/200x70/000000">
         <a href="">Nav Item 1</a>
         <a href=""> Nav Item 2</a>
         <a href="">Nav Item 3</a>
         <a href="">Nav Item 4</a>
       </header>
       <main>
-        <img src="https://via.placeholder.com/960x450"></br>
+        <img src="https://via.placeholder.com/960x450/000000"></br>
       </main>      
         <section>
-        <img src="https://via.placeholder.com/300x375">
-        <img src="https://via.placeholder.com/300x375">
-        <img src="https://via.placeholder.com/300x375"></br>
+        <img src="https://via.placeholder.com/300x375/0000000">
+        <img src="https://via.placeholder.com/300x375/0000000">
+        <img src="https://via.placeholder.com/300x375/000000"></br>
         </section>
         <p>
-        <img src="https://via.placeholder.com/480x400">
+        <img src="https://via.placeholder.com/480x400/000000">
         <section>
         <h3>Featured Section Heading</h3>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus sit amet volutpat consequat mauris nunc congue. Aenean et tortor at risus. Vitae nunc sed velit dignissim sodales ut eu sem. Ac feugiat sed lectus vestibulum mattis. Egestas pretium aenean pharetra magna ac placerat. Turpis egestas pretium aenean pharetra magna ac placerat. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Nisl condimentum id venenatis a condimentum vitae sapien. In egestas erat imperdiet sed euismod. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Sed vulputate odio ut enim. Semper quis lectus nulla at volutpat diam ut. Aenean vel elit scelerisque mauris pellentesque. Urna id volutpat lacus laoreet non curabitur.
